# shipinzhuanxie

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  一键部署.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: beginner_guide.md  openclaw_integration.md  product_plan.md  project_state.md
openclaw_skill/video-transcript-bridge/: README.md  SKILL.md  client.py  openclaw.config.example.json
scripts/: export_github_repo.ps1  install_openclaw_skill.py  one_click_deploy.ps1  one_click_deploy.py  one_click_deploy.sh
skills/video-transcript-bridge/: README.md  SKILL.md  client.py
src/douyin_pipeline/: __init__.py  __main__.py  cli.py  config.py  deepseek_summary.py  doctor.py  douyin_browser.py  downloader.py  downloader_fallbacks.py  downloader_runtime.py  errors.py  jobs.py  kuaishou_page.py  logging_utils.py  openclaw_api.py  parser.py  pipeline.py  pipeline_manifest.py  runtime_config.py  subprocess_utils.py  telegram_bot.py  (+7 more)
tests/: test_config.py  test_deepseek_summary.py  test_doctor.py  test_douyin_browser.py  test_downloader.py  test_downloader_runtime.py  test_errors.py  test_install_openclaw_skill.py  test_kuaishou_page.py  test_logging_utils.py  test_parser.py  test_telegram_bot.py  test_telegram_manager.py  test_telegram_messages.py  test_transcriber_normalization.py  test_transcriber_runtime.py  test_web_api.py  test_web_jobs.py  test_xiaohongshu_page.py
(+3 files in other folders)
